# ecx

./: .gitignore  API-doc-FORD-file.md  CHANGELOG.md  CMakeLists.txt  INSTALL.rst  INSTALL.txt  Makefile  README.md  README.rst  REQUIREMENTS.txt  VERSION  `  build.sh  configuration  configure  configure.sh  deploy_libs.sh  ecx.1  ford_doc.md  fpm.toml  requirements.txt
.github/workflows/: ci.yml  linux.yml  macos  macos.yml  release.txt  release.yml  windows.yml
app/: main.f90
doc/: 00-main.ilg  Makefile  build.sh  ecx.3  ecx.3.prep  ecx.3.rst  ecx.3.txt  ecx_capi_get_version.3  ecx_capi_get_version.3.txt  ecx_get_version.3  ecx_get_version.3.rst  ecx_get_version.3.txt  ecx_kTe.3  ecx_kTe.3.rst  ecx_kTe.3.txt  ecx_z.3  ecx_z.3.rst  ecx_z.3.txt  ecxcli.1  ecxcli.1.prep  ecxcli.1.rst  ecxcli.1.txt  index.md  list_manpages.sh  references.bib  references.md
doc/doxygen/: Doxyfile  Makefile
doc/ford/: ford.md
doc/specs/: capi.md  chemistry.md  eis.md  eis.rst  pec.md
doc/src/: 00-commands.tex  00-main.tex  00-packages.tex  00-titlepage.tex  02-mainmatter.tex  CHANGELOG.tex  README.tex  changelog.tex  commands.tex  getting_ready.texi  mainmatter.tex  make.in.tex  make.in.texi  manpages.texi  packages.tex  readme.tex  references.bib
doc_info/: Makefile  main.info  make.in.texi  manpages.texi
doc_rst_backup/: chemistry.rst
docs/: 00-main.4idx  00-main.css  00-main.html  capi_8f90.html  capi__core_8f90.html  capi__core_8f90.js  capi__eis_8f90.html  capi__eis_8f90.js  capi__kinetics_8f90.html  capi__version_8f90.html  capi__version_8f90.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxyfile  doxygen_crawl.html  ecx.3.html  ecx_8f90.html  ecx__api.3.html  ecx__api_8f90.html  ecx__api_8f90.js  ecx__api_get_version.3.html  ecx__capi.3.html  ecx__core_8f90.html  ecx__core_8f90.js  ecx__eis_8f90.html  ecx__eis_8f90.js  ecx__kinetics_8f90.html  ecx__kinetics_8f90.js  ecx__pec_8f90.html  ecx__pec_8f90.js  ecx__version_8f90.html  ecx__version_8f90.js  files.html  genindex.html  graph_legend.html  index.html  menudata.js  namespaceecx.html  namespaceecx____api.html  namespaceecx____api_a75dfe0b986cfa05a96888a80a5d173e4_icgraph.map  (+53 more)
docs/C/: index.html
docs/_modules/: index.html
docs/_sources/: index.rst.txt
docs/_static/: documentation_options.js
docs/api/: c.html  ecx.html  fortran.html  index.html  pyecx.html  python.html
docs/app/: index.html
docs/bibliography/: bibliography.html  index.html
docs/changelog/: index.html
docs/doxygen/: doxyfile  example_related_pages.md  main.example
docs/ecx_theory/: chemistry.html  eis.html  index.html  kinetics.html  pec.html
docs/examples/: index.html
docs/ford/: index.html  search.html
docs/fortran/: index.html
docs/getting_started/: ecx.html  examples.html  index.html  pyecx.html
docs/lists/: files.html  modules.html  procedures.html
docs/module/: capi.html  capi__core.html  capi__eis.html  capi__kinetics.html  capi__version.html  ecx.html  ecx__core.html  ecx__eis.html  ecx__kinetics.html  ecx__kinetics_capi.html  ecx__pec.html  ecx__version.html
docs/page/: changelog.html  examples.html  index.html  license.html  references.html
docs/proc/: alpha.html  assertequal.html  bv.html  capi_get_version.html  capi_kte.html  capi_nm2ev.html  capi_z.html  deg2rad.html  ecx_kinetics_bv.html  ecx_kinetics_nernst.html  ecx_kinetics_sbv.html  get_version.html  iph.html  kte.html  nernst.html  nm2ev.html  rad2deg.html  roundn.html  sbv.html  z.html
docs/python/: index.html
docs/references/: index.html
docs/releases/: 0.1.0-notes.html  index.html
docs/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_6.js  all_7.js  all_c.js  files_0.js  files_1.js  functions_2.js  functions_3.js  functions_4.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  namespaces_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_4.js
docs/sourcefile/: capi.f90.html  (+11 more)
documentation/: Makefile
example/: example.c  example.py  example_in_c.c  example_in_f.f90
examples/: CMakeLists.txt  example1.c  example2.c  example_eis.c  example_in_c.c  example_in_f.f90  example_in_py.py  example_kinetics.c
ford/: conf.md
ford_doc_in/: equations.md  index.md
include/: ecx.h  ecx_common.h  ecx_core.h  ecx_eis.h  ecx_eis_capi.h  ecx_kinetics.h  ecx_pec.h  ecx_pec_capi.h  ecx_types.h  ecx_utilities.h  ecx_version.h
prep/: Makefile  __init__.PY  ecx.FF  ecx_api.FF  ecx_capi.FF
py/: MANIFEST.in  Makefile  README.md  VERSION  make.in  pyproject.toml  setup.py
py/src/pyecx/: __init__.py  cpy_eis.c  cpy_kinetics.c  cpy_version.c  ecx.h
py/test/: test.py  test_version.py
pywrapper/: INSTALL.rst  INSTALL.txt  MANIFEST.in  Makefile  README.rst  build.bat  build.sh  pyproject.toml  run.py  setup.py  site.cfg.example
pywrapper/pyecx/: Makefile  __init__.py  _ecx.c  cpy_core.c  ecx.py  ecx_eis.c  ecx_eis_capi.h  ecx_kinetics.c  ecx_types.h  py_common.c  py_common.h  py_core.c  py_eis.c  py_kinetics.c  version.py
pywrapper/pyecx/tests/: test.py
pywrapper/src/pyecx/: cpy_common.c  cpy_common.h  cpy_core.c  cpy_eis.c  ecx_core.h  ecx_kinetics.h  libecx.dylib
scripts/: fapi.py
sphinx/: Makefile
src/: CMakeLists.txt  capi.f90  capi_core.f90  capi_eis.f90  capi_kinetics.f90  capi_version.f90  cecx.f90  cecx_version.f90  config.c  config.h.in  ecx.f90  ecx.h  ecx_api.f90  ecx_capi.f90  ecx_common.f90  ecx_constants.f90  ecx_core.f90  ecx_core_capi.f90  ecx_eis.f90  ecx_eis_capi.f90  ecx_eis_capi.h  ecx_kinetics.f90  ecx_kinetics_capi.f90  ecx_pec.f90  ecx_pec_capi.h  ecx_types.h  ecx_utilities.f90  ecx_version.f90  ecx_version_capi.f90  eis.c  eis.f90  eis.h  electrox.h  generate_codata.c  io.c  kinetics.c  kinetics.c.txt  utilities.c  utilities.c.txt  version.c
srcprep/: ecx.f90  ecx_api.f90  ecx_capi.f90
test/: test_common.f90  test_core.f90  test_eis.f90  test_eis_capi.c  test_kinetics.f90  test_utilities.f90
tests/: CMakeLists.txt  test_bv.c  test_common.c  test_common.h  test_eis.c  test_eis_r.c  test_io.c  test_utilities.c  test_z.z
(+191 files in other folders)
