[build-system]
requires = ["setuptools", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "pyecx"
dynamic=["version"]
authors = [{name = "Milan Skocic", email = "milan.skocic@icloud.com"}]
description = "pyecx: electrochemistry for Python."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
classifiers=["Development Status :: 5 - Production/Stable",
            "Intended Audience :: Science/Research"]

[project.urls]
Documentation = "https://milanskocic.github.io/ecx/index.html"
Source = "https://github.com/MilanSkocic/ecx"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyecx = ["libecx.*", "libgfortran*", "libquadmath*", "libgcc_s*", "libwinpthread*"]
